@@ -1,4 +1,4 @@
-// Copyright (C) 2005 - 2009 Philip Aston
+// Copyright (C) 2005 - 2011 Philip Aston
 // All rights reserved.
 //
 // This file is part of The Grinder software distribution. Refer to
@@ -23,6 +23,7 @@ package net.grinder.engine.agent;
 
 import java.io.File;
 import java.io.InputStream;
+import java.lang.instrument.Instrumentation;
 
 import net.grinder.common.GrinderProperties;
 import net.grinder.communication.CommunicationException;
@@ -34,7 +35,9 @@ import net.grinder.engine.common.ScriptLocation;
 import net.grinder.engine.messages.InitialiseGrinderMessage;
 import net.grinder.testutility.AbstractFileTestCase;
 import net.grinder.testutility.AssertUtilities;
+import net.grinder.testutility.RandomStubFactory;
 import net.grinder.testutility.RedirectStandardStreams;
+import net.grinder.util.weave.agent.ExposeInstrumentation;
 
 
 /**
@@ -214,6 +217,52 @@ public class TestDebugThreadWorkerFactory extends AbstractFileTestCase {
     }
   }
 
+  // Bug 2958145.
+  public void testExposeInstrumentationNotIsolated() throws Exception {
+
+    final Instrumentation originalInstrumentation =
+      ExposeInstrumentation.getInstrumentation();
+
+    final RandomStubFactory<Instrumentation> instrumentationStubFactory =
+      RandomStubFactory.create(Instrumentation.class);
+    final Instrumentation instrumentation =
+      instrumentationStubFactory.getStub();
+
+    DebugThreadWorkerFactory.setIsolatedRunnerClass(
+      AccessInstrumentationRunner.class);
+
+    try {
+      ExposeInstrumentation.premain("", instrumentation);
+
+      final DebugThreadWorkerFactory factory =
+        new DebugThreadWorkerFactory(m_agentIdentity,
+                                     m_fanOutStreamSender,
+                                     false,
+                                     new ScriptLocation(new File(".")),
+                                     m_properties);
+
+      final RedirectStandardStreams rss0 = new RedirectStandardStreams() {
+        protected void runWithRedirectedStreams() throws Exception {
+          final Worker worker = factory.create(null, null);
+          worker.waitFor();
+        }
+      };
+
+      rss0.run();
+
+      final String worker0Result = new String(rss0.getStdoutBytes());
+
+      AssertUtilities.assertContains(
+        worker0Result,
+        Integer.toString(instrumentation.hashCode()));
+    }
+    finally {
+      DebugThreadWorkerFactory.setIsolatedRunnerClass(null);
+      ExposeInstrumentation.premain("", originalInstrumentation);
+    }
+  }
+
+
   public static class BadClassInaccesible {
     BadClassInaccesible() { }
   }
@@ -236,25 +285,42 @@ public class TestDebugThreadWorkerFactory extends AbstractFileTestCase {
     }
   }
 
-  public static class GoodRunner implements IsolateGrinderProcessRunner {
-    public int run(InputStream agentInputStream) {
-      final StreamReceiver streamReceiver =
-        new StreamReceiver(agentInputStream);
+  public abstract static class AbstractGoodRunner
+    implements IsolateGrinderProcessRunner {
+    protected InitialiseGrinderMessage initialise(InputStream inputStream) {
 
-      InitialiseGrinderMessage message;
+      final StreamReceiver streamReceiver = new StreamReceiver(inputStream);
 
       try {
-        message = (InitialiseGrinderMessage)streamReceiver.waitForMessage();
+        return (InitialiseGrinderMessage)streamReceiver.waitForMessage();
       }
       catch (CommunicationException e) {
         throw new AssertionError(e);
       }
+    }
+  }
+
+  public static class GoodRunner extends AbstractGoodRunner{
+    public int run(InputStream agentInputStream) {
+      final InitialiseGrinderMessage message = initialise(agentInputStream);
 
       MyStaticHolder.incrementNumber();
 
       System.out.println(
         "Hello from " + message.getWorkerIdentity().getNumber() +
         " count is " + MyStaticHolder.getNumber());
+
+      return 0;
+    }
+  }
+
+  public static class AccessInstrumentationRunner
+    extends AbstractGoodRunner {
+
+    public int run(InputStream agentInputStream) {
+      initialise(agentInputStream);
+
+      System.out.println(ExposeInstrumentation.getInstrumentation().hashCode());
 
       return 0;
     }
